--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>br.com.joaodomingos</groupId>
-	<artifactId>todoolist</artifactId>
+	<artifactId>todolist</artifactId>
 	<version>1.0.0</version>
-	<name>todoolist</name>
+	<name>todolist</name>
 	<description>Gerenciador de tarefas</description>
 	<properties>
 		<java.version>17</java.version>
